--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,17 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity
-            android:name="com.dreaming.drilling.adapter.MainActivity"
+            android:name="com.dreaming.drilling.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.dreaming.drilling.activity.WorkcontentActivity"
+            android:label="@string/title_activity_workcontent" >
         </activity>
     </application>
 
