--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name="com.dreaming.drilling.activity.TakeoverActivity"
             android:label="@string/title_activity_takeover" >
         </activity>
+        <activity
+            android:name="com.dreaming.drilling.activity.TourreportViewActivity"
+            android:label="@string/title_activity_tourreport_view" >
+        </activity>
     </application>
 
 </manifest>
